--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="height=1 , width=device-width, initial-scale=1.0, maximum-scale=1.0"
+      content="height=1 , width=device-width, initial-scale=1.0"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Bowlby One SC"
@@ -63,14 +63,14 @@
     </section>
 
     <script type="text/javascript">
-    	if(false){
-    	const w1 = document.getElementById("welcome1");
-    	const w2 = document.getElementById("welcome2");
-    	w1.classList.remove("opacity-welcome-media");
-    	w1.style.display="none";
-    		w2.classList.remove("welcome-container");
-    		w2.style.display="none";
-    	}
+      if (false) {
+        const w1 = document.getElementById("welcome1");
+        const w2 = document.getElementById("welcome2");
+        w1.classList.remove("opacity-welcome-media");
+        w1.style.display = "none";
+        w2.classList.remove("welcome-container");
+        w2.style.display = "none";
+      }
     </script>
 
     <!-- MENU ICON TOP RIGHT -->
@@ -177,6 +177,24 @@
         <h2>
           <a
             href="#!"
+            attrbref="presentation/index.html"
+            onclick="return false"
+            onmousedown="myFunction(this.id)"
+            id="redirect-f"
+          >
+            Info Page of Myself & Works Overview
+          </a>
+        </h2>
+        <p>
+          Formal looking presentation page, With more indepth infos, is now new
+          and not responsive jet, i am still working on it.
+        </p>
+      </section>
+
+      <section class="part" attribute-in-html="attribute!">
+        <h2>
+          <a
+            href="#!"
             attrbref="sass-lodge/index.html"
             onclick="return false"
             onmousedown="myFunction(this.id)"
@@ -198,10 +216,14 @@
             onclick="return false"
             onmousedown="myFunction(this.id)"
             id="redirect-b"
-            > Webpage for travelling </a
           >
+            Webpage for travelling
+          </a>
         </h2>
-        <p>Responsive webpage on thema Travelling , modern looking and full of colors</p>
+        <p>
+          Responsive webpage on thema Travelling , modern looking and full of
+          colors
+        </p>
       </section>
 
       <section class="part" attribute-in-html="attribute!">
@@ -217,9 +239,9 @@
         </h2>
         <p>
           A simple game made with javascript and html, the enemies are coming
-          from the top and the hero has to shoot a laser to destry them, untill
-          now tere are 3 level/states, gaining experience the hero and laser are
-          gitting better.
+          from the top and the hero destroyes them with laser, there are 3
+          level/states, gaining experience the hero and laser are gitting
+          better.
         </p>
       </section>
 
@@ -344,6 +366,6 @@
     <!-- <script src="main.js"></script> not working -->
     <script src="main.js"></script>
     <script src="menu.js"></script>
-  <script src="welcome.js"></script> 
+    <script src="welcome.js"></script>
   </body>
 </html>
